<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Simple strings. -->
    <string name="app_name">FireworksMeasure</string>
    
    <string name="locating_msg">Now Locating…</string>
    <string name="see_fw_msg">Touch the display when you see fireworks</string>
    <string name="center_fw_msg">Touch the display again(%s)</string>
    
    <string name="unit_ms">ms</string>
    <string name="unit_angle">degree</string>
    
    <string name="elevation">Elevation</string>
    <string name="compus">Direction</string>
    <string name="delay_time">Delay Time</string>
    
	<string name="delay_time_result">Delay Time:%dms\n</string>
    <string name="elevation_result">Elevation:%.1f degree\n</string>
    <string name="sound_speed_result">Sound Speed:%.1fm/s</string>
    <string name="temp_result">(Temp.%.1f degree)\n</string>
    <string name="one_line_distance_result">One Line Distance:%.1fm\n</string>
    <string name="height_result">Height:%.1fm\n</string>
    <string name="distance_result">Distance:%.1fm\n</string>
    <string name="compus_result">Direction:%s</string>
    <string name="compus_result2">(%s)</string>
    
    <string name="result_title">The Results</string>
    <string name="remeasure_button">Again</string>
    <string name="map_button">Show a Map</string>
        
    <string-array name="compus_names">
        <item>S</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>W</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
        <item>N</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>E</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
    </string-array>
    
    <!-- Menu -->
    <string name="menuShare">Share</string>
    <string name="menuSettings">Settings</string>
    
    <!-- Share Message -->
    <string name="msgShare">Fireworks are setting off here! (%s) #FireworksMeasure</string>
    
    <!-- Setting Activity -->
    <string name="buttonSetPlace">Location Setting</string>
    <string name="checkAutoDetect">Detect fireworks automatically</string>
    <string name="textDetectRange">Detection Range</string>
    <string name="textCameraThreshold">The threshold of the brightness</string>
    <string name="checkSoundDetect">Detect the sound of the fireworks</string>
    <string name="textSoundThreshold">The threshold of the sound</string>
    <string name="textFrequency">The frequency of the sound</string>
    <string name="map_set_location">Use this location</string>
    <string name="map_set_myLocation">Move to my location</string>
</resources>

