<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonSetPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSetPlace" />

            <CheckBox
                android:id="@+id/checkAutoDetect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkAutoDetect" />

            <TextView
                android:id="@+id/textDetectRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDetectRange" />

            <SeekBar
                android:id="@+id/seekBarDetectRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/textCameraThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCameraThreshold" />

            <SeekBar
                android:id="@+id/seekBarCameraThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <CheckBox
                android:id="@+id/checkSoundDetect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkSoundDetect" />

            <TextView
                android:id="@+id/textFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textFrequency" />

            <SeekBar
                android:id="@+id/seekBarFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/textFrequencyHz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            
            <TextView
                android:id="@+id/textSoundThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSoundThreshold" />

            <SeekBar
                android:id="@+id/seekBarSoundThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

</ScrollView>
